--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="app.js"></script>
+    <h2>Adults Plain Cotton T-shirt
 
-    <h1>Hello</h1>
+    <h3>Price:499</h3>
     
+    <button onclick="alert('added to cart')">Add to Cart</button>
+    </h2>
 </body>
 </html>
