nested functions, rest parametres , default parametres and function expressions in js

--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
     "
     >Show Quantity</button>
     <button onclick="
-    cartQuantity = cartQuantity +1
+    cartQuantity ++
 
     console.log(`cartQuantity:${cartQuantity}`)
 
     ">Add to Cart</button>
 
     <button 
-    onclick="cartQuantity= cartQuantity + 2
+    onclick="cartQuantity +=2
     console.log(`cartQuantity:${cartQuantity}`)
     "
     >+2</button>
 
     <button
     onclick="
-    cartQuantity = cartQuantity + 3
+    cartQuantity +=3
     console.log(`cartQuantity:${cartQuantity}`)
     "
     >+3</button>
