object destructuring in js

--- a/object-destructuring.html
+++ b/object-destructuring.html
@@ -6,14 +6,15 @@
     <title>Document</title>
 </head>
 <body>
+    <script>
+const obj = {
+    name:"fiyaz",
+    age:25
+}
+const {name,age} = obj
 
+console.log(name,age)
 
-<script >
-
-const a ="ali"
-
-console.log(a.length)
-console.log(a.toUpperCase())
-
-</script>
+    </script>
+</body>
 </html>
