comparing two objects

--- a/object-destructuring.html
+++ b/object-destructuring.html
@@ -13,7 +13,13 @@ const obj = {
 }
 const {name,age} = obj
 
-console.log(name,age)
+//console.log(name,age)
+
+
+const obj1 = {
+    name
+}
+console.log(obj1)
 
     </script>
 </body>
