--- a/objects.html
+++ b/objects.html
@@ -97,21 +97,25 @@
 
 // instead we need to check using the properties of the two objects
 
-function isSameProduct(product1,product2){
-    if(product1.name === product2.name && product1.age===product2.age){
-        return true
-    }else return false
-}
-const pro1 = {
-  name: 'faris',
-  age:25
-}
-const pro2 = {
-    name:"faris",
-    age:25
-}
+// function isSameProduct(product1,product2){
+//     if(product1.name === product2.name || product1.age===product2.age){
+//         return true
+//     }else return false
+// }
+// const pro1 = {
+//   name: 'faris',
+//   age:25
+// }
+// const pro2 = {
+//     name:"faris",
+//     age:26
+// }
 
-console.log(isSameProduct(pro1,pro2))
+// console.log(isSameProduct(pro1,pro2))
+
+const a = "Good Morning"
+
+console.log(a.toLowerCase())
 </script>
 </body>
 </html>
