youtube subscription button

--- a/dom1.html
+++ b/dom1.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <button>Hello</button>
+    <button class="one">one</button>
+    <button class="two">two</button>
     <script>
 // document.body.innerHTML ="Hello"
 
@@ -18,7 +19,9 @@
 
 // document.body.innerHTML = "<button>Hai</button>"
 
-console.log(document.querySelector("button"))
+// console.log(document.querySelector("button"))
+
+console.log(document.querySelector(".two"))
     </script>
 </body>
 </html>
