updated youtube subscribe button

--- a/dom-projects.html
+++ b/dom-projects.html
@@ -4,12 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dom projects</title>
+    <style>
+      .subscribe-button{
+        border: none;
+        background-color: black;
+        color: white;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 10px;
+        padding-right: 10px;
+        font-weight: bold;
+        border-radius: 50px;
+        cursor: pointer;
+
+      }
+
+      .is-subscribed{
+        background-color: rgb(240,240,240);
+        color: black;
+      }
+    </style>
 </head>
 <body>
 <p>Youtube Subscribe Button</p>
 <button onclick="
   subscribe()
-"class="subscribe">Subscribe</button>
+"class="subscribe subscribe-button">Subscribe</button>
 
     <script>
   function subscribe (){
@@ -17,6 +37,7 @@
 
   if(subscibeBtn.innerHTML === 'Subscribe'){
     subscibeBtn.innerHTML = 'Subscribed'
+    subscibeBtn.classList.add('is-subscribed')
   }else {
     subscibeBtn.innerHTML = 'Subscribe'
   }
