--- a/dom-projects.html
+++ b/dom-projects.html
@@ -23,6 +23,10 @@
         background-color: rgb(240,240,240);
         color: black;
       }
+
+      body{
+        font-family:Arial, Helvetica, sans-serif
+      }
     </style>
 </head>
 <body>
@@ -40,6 +44,7 @@
     subscibeBtn.classList.add('is-subscribed')
   }else {
     subscibeBtn.innerHTML = 'Subscribe'
+    subscibeBtn.classList.remove('is-subscribed')
   }
   }
 
