--- a/four.html
+++ b/four.html
@@ -77,14 +77,116 @@
 // }
 // i=5
 
-let i =5
+// let i =5
 
-while(i>=0){
-    console.log(i)
+// while(i>=0){
+//     console.log(i)
 
-    i-=2
+//     i-=2
+// }
+// i = 0
+
+// let arr = [1,2,3]
+
+// let newArr =[]
+
+// for(i=0;i<arr.length;i++){
+//     newArr.push(arr[i]+1)
+// }
+// console.log(newArr)
+
+// let array = [2,4,6,8]
+
+// let newArray =[]
+
+// for(i =0 ; i< array.length; i++){
+//     newArray.push(array[i]-1)
+// }
+// console.log(newArray)
+
+
+// let arr =[1,2,3]
+// let newArr =[]
+// let i = 0
+
+// while(i<arr.length){
+//     newArr.push(arr[i]*3)
+// console.log(newArr)
+// i++
+// }
+
+// let array = [1,2,3]
+
+// array.pop = 4
+
+// console.log(array)
+
+// const arr = [1,2,3]
+
+// arr[2] = 99
+
+// console.log(arr)
+
+//   function getLastValue(array){
+//     let lastIndex = array.length -1
+//     return array[lastIndex]
+//   }
+// console.log(getLastValue([1,20,22,24,5]))
+
+// function getLastValue(arr){
+//     let lastIndex = arr.length -1
+//     return arr[lastIndex]
+// }
+// console.log(getLastValue(['hi',"hello",'good']))
+
+// function arraySwap(array){
+//     let lastIndex = array.length -1
+
+//     let firstValue = array[0]
+//     let lastValue = array[lastIndex]
+
+//     array[0] = lastValue
+
+//     array[lastIndex] = firstValue
+
+//     return array
+    
+// }
+
+// console.log(arraySwap([1,20,23,5]))
+
+// function arraySwap(array){
+//     let lastIndex = array.length -1   
+
+//     let lastValue = array[lastIndex]
+//     let firstValue = array[0]
+
+//     array[0] = lastValue
+//     array[lastIndex] = firstValue
+
+//     return array
+// }
+// console.log(arraySwap(['hai','hello','good']))
+
+function getLastValue(array){
+    let lastIndex = array.length -1
+
+    return array[lastIndex]
 }
-i = 0
+console.log(getLastValue([1,2,3,4,5]))
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
