--- a/four.html
+++ b/four.html
@@ -168,28 +168,154 @@
 // }
 // console.log(arraySwap(['hai','hello','good']))
 
-function getLastValue(array){
-    let lastIndex = array.length -1
+// function getLastValue(array){
+//     let lastIndex = array.length -1
 
-    return array[lastIndex]
+//     return array[lastIndex]
+// }
+// console.log(getLastValue([1,2,3,4,5]))
+
+
+
+// function arraySwap(array){
+//   let lastIndex = array.length -1
+
+//   let lastValue = array[lastIndex]
+
+//   let firstValue = array[0]
+
+//   array[lastIndex] = firstValue
+//   array[0]= lastValue
+
+//   return array
+
+  
+// }
+
+// console.log(arraySwap([1,2,3,4,5]))
+
+// function getLastValue(array){
+//   let lastIndex = array.length -1
+
+//   return array[lastIndex]
+// }
+// console.log(getLastValue(['a','b','c']))
+
+
+// function arraySwap(array){
+//   let lastIndex = array.length -1
+
+//   let firstValue = array[0]
+//   let lastValue = array[lastIndex]
+
+//   array[0] = lastValue
+//   array[lastIndex] = firstValue
+
+//   return array
+// }
+
+// console.log(arraySwap(['a','b','c']))
+
+// function getLastValue(array){
+
+// let lastIndex = array.length -1
+
+
+// return array[lastIndex]
+
+// }
+
+
+// console.log(getLastValue([1,2,3,4]))
+
+// for(i=0;i<=10;i+=2){
+
+   
+//     console.log(i)
+// }
+
+
+// for(i = 5;i>=0;i--){
+//     console.log(i)
+// }
+
+// let i =0
+
+// while(i<=10){
+//     console.log(i)
+
+//     i+=2
+// }
+
+// let i =5
+
+// while(i>=0){
+//     console.log(i)
+
+//     i--
+// }
+
+// for(let i=0; i<=10;i+=2){
+//     console.log(i)
+// }
+
+// for (let i =5; i>=0;i--){
+//     console.log(i)
+// }
+
+// let i = 0
+
+// while(i<=10){
+//     console.log(i)
+
+//     i+=2
+// }
+
+// let i =5
+
+// while(i>=0){
+//     console.log(i)
+//     i-- 
+// }
+
+// let array =[1,2,3,4]
+
+// let newArray =[]
+
+// for(let i =0;i<=array.length-1;i++){
+//     newArray.push(array[i]+1)
+// }
+// console.log(newArray)
+
+// function addOne(array){
+//   let newArray = []
+
+//   for(let i =0;i<= array.length -1;i++){
+//     newArray.push(array[i]+1)
+    
+//   }
+//   return newArray
+// }
+// console.log(addOne([1,2,3]))
+
+// function addOne(array){
+// let newArray = []
+// for(let i =0;i<=array.length;i++){
+//     newArray.push(array[i]+1)
+// }
+// return newArray
+// }
+
+// console.log(addOne([-2,-1,0,1]))
+
+function addNum(array,num){
+    let newArray =[]
+    for(let i =0;i<array.length;i++){
+        newArray.push(array[i]+2)
+    }
+  return newArray
 }
-console.log(getLastValue([1,2,3,4,5]))
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+console.log(addNum([1,2,3],2))
 
 
     </script>
