--- a/four.html
+++ b/four.html
@@ -308,16 +308,54 @@
 
 // console.log(addOne([-2,-1,0,1]))
 
-function addNum(array,num){
-    let newArray =[]
-    for(let i =0;i<array.length;i++){
-        newArray.push(array[i]+2)
-    }
-  return newArray
+// function addNum(array,num){
+//     let newArray =[]
+//     for(let i =0;i<array.length;i++){
+//         newArray.push(array[i]+2)
+//     }
+//   return newArray
+// }
+// console.log(addNum([1,2,3],2))
+
+// function addNum(array,num){
+//   let newArray =[]
+
+//   for(let i =0;i<array.length;i++){
+//     newArray.push(array[i]+3)
+//   }
+//   return newArray
+// }
+// console.log(addNum([1,2,3]))
+
+// function addNum(array,num){
+//     let newarray = []
+
+//     for(let i =0;i<array.length;i++){
+//         newarray.push(array[i]+2)
+//     }
+//     return newarray
+// }
+// console.log(addNum([-2,-1,0,99],2))
+
+// function addArrays(array1,array2){
+//   let sum =[]
+
+//   for (i =0;i<array1.length;i++){
+//     sum.push(array1[i]+array2[i])
+//   }
+//   return sum
+// }
+// console.log(addArrays([1,1,2],[1,1,3]))
+
+function addArrays(array1,array2){
+  let sum =[]
+
+  for(let i =0;i<array2.length;i++){
+    sum.push(array2[i]+array1[i])
+  }
+  return sum
 }
-console.log(addNum([1,2,3],2))
-
-
+console.log(addArrays([1,2,3],[4,5,6]))
     </script>
 </body>
 </html>
