--- a/four.html
+++ b/four.html
@@ -347,15 +347,160 @@
 // }
 // console.log(addArrays([1,1,2],[1,1,3]))
 
-function addArrays(array1,array2){
-  let sum =[]
+// function addArrays(array1,array2){
+//   let sum =[]
 
-  for(let i =0;i<array2.length;i++){
-    sum.push(array2[i]+array1[i])
+//   for(let i =0;i<array2.length;i++){
+//     sum.push(array2[i]+array1[i])
+//   }
+//   return sum
+// }
+// console.log(addArrays([1,2,3],[4,5,6]))
+
+// function countPositive(nums){
+//     let result =0
+
+//     for(let i =0;i<nums.length;i++){
+//         if(nums[i]>0){
+//             result++
+//         }
+//     }
+//     return result
+// }
+// console.log(countPositive([1,-3,5]))
+
+// function countPositive(nums){
+//   let result =0
+
+//   for(let i =0;i<nums.length;i++){
+//     if(nums[i]>0){
+//         result++
+//     }
+//   }
+//   return result
+// }
+// console.log(countPositive([-2,3,-5,7,10]))
+
+
+// function minMax(nums){
+//   let result = {
+//     min:nums[0],
+//     max:nums[0]
+//   }
+  
+
+//   for(let i =0;i<nums.length;i++){
+//     let value = nums[i]
+//     if(value< result.min){
+//         result.min=value
+//     }
+//     if(value>result.max){
+//         result.max = value
+//     }
+//   }
+//   return result
+// }
+
+// console.log(minMax([1,-3,5]))
+
+// function minMax(nums){
+//   let result ={
+//     min:nums[0],
+//     max:nums[0]
+//   }
+//   for(let i =0;i<nums.length;i++){
+//     let value = nums[i]
+//     if(value<result.min){
+//     result.min =value
+//   }
+//   if(value>result.max){
+//     result.max = value
+//   }
+//   }
+  
+  
+//   return result
+// }
+// console.log(minMax([-2,3,-5,7,10]))
+
+// function minMax(nums){
+//   let result ={
+//     min:nums[0],
+//     max:nums[0]
+//   }
+//   for(let i=0;i<nums.length;i++){
+//     let value = nums[i]
+//     if(value<result.min){
+//       result.min =value
+//     }
+//     if(value>result.max){
+//       result.max =value
+//     }
+//   }return result
+// }
+// console.log(minMax([1,2,3]))
+
+// function minMax(nums){
+//  let result ={
+//     min:[],
+//     max:[]
+//  }
+//  for (let i =0;i<nums.length;I++){
+//     let value =nums[i]
+
+//     if(value< result.min || value === null){
+//         result.min=value
+//     }
+//     if(value>result.max || value === null){
+//         result.max =value
+//     }
+//  }return result
+
+// }
+// console.log(minMax([]))
+
+// function minMax(nums){
+//    let result ={
+//     min:[3],
+//     max:[3]
+//    }
+//    for(let i=0;i<nums.length;i++){
+//     let value = nums[i]
+//     if(value<result.min || value===3){
+//         result.min = value
+//     }
+//     if(value>result.max || value===3){
+//         result.max=value
+//     }
+//    }return result
+// }
+// console.log(minMax[3])
+
+function minMax(nums){
+  let result ={
+    min:[3],
+    max:[3]
   }
-  return sum
+
+  for(let i=0;i<nums.length;i++){
+    let value = nums[i]
+
+    if(result.min === 3 || value < result.min){
+        result.min =value
+    }
+    if(result.max === 3 || value> result.max){
+        result.max = value
+    }
+  }
+  return result
 }
-console.log(addArrays([1,2,3],[4,5,6]))
+// console.log(minMax([]))
+console.log(minMax([3]))
+
+
+
+
+
     </script>
 </body>
 </html>
