--- a/four.html
+++ b/four.html
@@ -476,30 +476,74 @@
 // }
 // console.log(minMax[3])
 
-function minMax(nums){
-  let result ={
-    min:[3],
-    max:[3]
-  }
+// function minMax(nums){
+//   let result ={
+//     min:[3],
+//     max:[3]
+//   }
 
-  for(let i=0;i<nums.length;i++){
-    let value = nums[i]
+//   for(let i=0;i<nums.length;i++){
+//     let value = nums[i]
 
-    if(result.min === 3 || value < result.min){
-        result.min =value
-    }
-    if(result.max === 3 || value> result.max){
-        result.max = value
-    }
-  }
-  return result
-}
-// console.log(minMax([]))
-console.log(minMax([3]))
+//     if(result.min === 3 || value < result.min){
+//         result.min =value
+//     }
+//     if(result.max === 3 || value> result.max){
+//         result.max = value
+//     }
+//   }
+//   return result
+// }
+// // console.log(minMax([]))
+// console.log(minMax([3]))
+// function countWords(words){
+//    let result={}
+
+//    for(let i=0;i<words.length;i++){
+//     let word = words[i]
+
+//     if(!result[word]) {
+//         result[word]=1
+//     }else{
+//         result[word]++   
+//     }
+//    }return result
+// }
+// console.log(countWords(['apple','grape','apple','apple']))
+
+// function countWords(words){
+//   let result={}
+
+//   for(let i=0;i< words.length;i++){
+//     let word = words[i]
+
+//     if(result[word]=== undefined){
+//         result[word]=1
+//     }else{
+//         result[word]++
+//     }
+//   }
+//   return result
+// }
+// console.log(countWords(['a','b','c']))
 
 
+// object destructuring
 
+// const data={
+//     name:"fiyaz",
+//     age:26,
+//     place:"koduvally"
+// }
 
+// const{name,age,place} = data
+// console.log(name)
+
+const arr =[1,2,3]
+
+const [one,two,three] = arr
+
+console.log(one)
 
     </script>
 </body>
