--- a/four.html
+++ b/four.html
@@ -539,11 +539,138 @@
 // const{name,age,place} = data
 // console.log(name)
 
-const arr =[1,2,3]
+// const arr =[1,2,3]
 
-const [one,two,three] = arr
+// const [one,two,three] = arr
 
-console.log(one)
+// console.log(one)
+
+//break
+
+// for(i=1;i<=10;i++){
+//     console.log(i)
+
+//     if(i===8){
+//         break;
+//     }
+// }
+//continue
+
+// for (let i = 1; i <= 10; i++) {
+//     if (i === 3) {
+//         continue;
+//     }
+//     console.log(i);
+// }
+
+// for(let i=1;i<=10;i++){
+//     if(i%3===0){
+//         console.log(i)
+//     }
+// }
+
+// for(let i =1;i<=10;i++){
+//     if(i%4===0){
+//         continue
+//     }
+//     console.log(i)
+// }
+
+// let i =1
+
+// while(i<10){
+//     if(i%3===0){
+//         i++
+//         continue
+//     }console.log(i)
+//     i++
+// }
+
+// const nums =[1,2,3]
+// const newArray =[]
+
+// for(i =0;i<nums.length;i++){
+
+//     newArray.push(nums[i]*2 )
+// }
+// console.log(newArray)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     </script>
 </body>
