--- a/five.html
+++ b/five.html
@@ -141,14 +141,69 @@
 // }
 // console.log(letterCount(['a','b','a','c','d','c']))
 
+// function removeEgg(foods){
+//  const reversedFoods = foods.reverse()
+
+//  const result =[]
+//  let eggsRemoved =0
+
+//  for (let i =0;i<reversedFoods.length;i++){
+//     if(reversedFoods[i]==='egg'&& eggsRemoved <2){
+//         eggsRemoved++
+//         continue
+//     }
+//     result.push(reversedFoods[i])
+//  }
+//  return result.reverse()
+// }
+// console.log(removeEgg(['egg','bread','egg','jam','egg']))
 
 
+// function removeEgg(foods){
+//  let foodsCopy = foods.slice()
+//  let reversedFoods = foodsCopy.reverse()
 
+//  let result =[]
+//  let eggsRemoved =0
 
+//  for(let i =0;i<reversedFoods.length;i++){
+//     if(reversedFoods[i]==='egg'&&eggsRemoved<2){
+//         eggsRemoved++
+//         continue
+//     }
+//     result.push(reversedFoods[i])
+//  }
+//  return result.reverse()
+// }
+// const foods =['egg','apple','egg','egg','ham']
+// console.log(removeEgg(foods))
+// console.log(foods)
 
+// for(let i =1;i<=20;i++){
+//     if(i%3===0 && i%5===0){
+//         console.log('FizzBuzz')
+//     }
+//     else if(i%5===0){
+//         console.log("Buzz")
+//     }else if(i%3===0 ){
+//         console.log('Fizz')
+//     }else{
+//         console.log(i)
+//     }
+// }
 
+// function unique(array){
+//    let newArray = []
 
-
+//    for(let i=0;i<array.length;i++){
+//     if(newArray.indexOf(array[i])===-1){
+//         newArray.push(array[i])
+//     }
+    
+//    }
+//    return newArray
+// }
+// console.log(unique(['a','b','c','c','b','a']))
 
 
     </script>
