set timeout excercises

--- a/advance-functions.html
+++ b/advance-functions.html
@@ -27,12 +27,52 @@
 // }
 // obj.fun()
 // console.log(obj.age)
-function one(param){
-  param()
-}
-one(function(){
-    console.log("hai")
-})
+// function one(param){
+//   param()
+// }
+// one(function(){
+//     console.log("hai")
+// })
+
+// foreach
+// ['a','b','c'].forEach(function(letters,index){
+
+//     if(letters==='b'){
+//         return
+//     }
+//   console.log(index,letters)
+// })
+
+// let add = function (){
+//     console.log(2+3)
+// }
+// add()
+// add()
+
+// function runTwice(fun){
+//   fun()
+//   fun()
+// }
+// runTwice(function(){
+//  console.log('12b')
+// })
+// runTwice(add)
+
+// let add =function(){
+//     console.log(2+3)
+// }
+// add()
+// add()
+
+// function runTwice(fun){
+//   fun()
+//   fun()
+// }
+// runTwice(function(){
+//     console.log('12b')
+// })
+// runTwice(add)
+
 
     </script>
 </body>
