max random excercise

--- a/13.html
+++ b/13.html
@@ -19,7 +19,7 @@ document.getElementById('Submit-button').onclick = function (){
 }
 
 </script> -->
-<style>
+<!-- <style>
     #count-label{
          display: block;
          cursor: pointer;
@@ -76,5 +76,132 @@ resetButton.onclick =function (){
     count =0
     countLabel.textContent=count
 }
+
+</script> -->
+<style>
+    body{
+ 
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        text-align: center;
+        cursor: pointer;}
+    #roll-button{
+ font-size: 20px;
+ cursor: pointer;
+ padding: 10px;
+ border-radius: 5px;
+    }
+    #my-label{
+        font-size: 20px;
+    }
+</style>
+<label id="label1" class="labels"></label>
+<label id="label2" class="labels"></label>
+<label id="label3" class="labels"></label>
+<button id="roll-button">Roll</button>
+<script>
+
+let rollButton =document.getElementById('roll-button')
+let label1 = document.getElementById('label1')
+let label2 = document.getElementById('label2')
+let label3 = document.getElementById('label3')
+
+
+let min =1;
+let max =6
+
+let randomNumber1;
+let randomNumber2;
+let randomNumber3;
+
+rollButton.onclick= function(){
+    randomNumber1 =Math.floor(Math.random() * max)+min
+    randomNumber2 = Math.floor(Math.random()* max)+ min
+    randomNumber3 = Math.floor(Math.random()* max)+min
+    label1.textContent = randomNumber1
+    label2.textContent = randomNumber2
+    label3.textContent = randomNumber3
+}
+//     let a =3
+//   let  b=4
+
+//     console.log(Math.pow(b,a))
+
+// let min =50
+// let max =100
+// let randomNumber =Math.trunc(Math.random()*(max-min))+min
+
+// console.log(randomNumber)
+
+// // console.log(Math.sqrt(x))
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </script>
