destructuring in js

--- a/16.html
+++ b/16.html
@@ -26,7 +26,7 @@
 
 <!-- <button onclick="clicked()">Click</button> -->
 
-<button id="btn">Click</button>
+<!-- <button id="btn">Click</button> -->
 
 
 
@@ -38,18 +38,30 @@
 // using eventListener
 
 
-let button = document.getElementById('btn')
+// let button = document.getElementById('btn')
 
-addEventListener('click', ()=>{
-    alert('clicked')
-})
-
-
+// addEventListener('click', ()=>{
+//     alert('clicked')
+// })
 
 
+// array destructuring
+// const arr =['fiyaz','faris','finu']
 
+// const[first,second,third] = arr
 
+// console.log(first)
 
+// object destructuring
+
+const user ={
+    name:'fiyaz',
+    age:26
+}
+
+const {name,age} = user
+
+console.log(name)
 
 </script>
 
