--- a/16.html
+++ b/16.html
@@ -54,14 +54,88 @@
 
 // object destructuring
 
-const user ={
-    name:'fiyaz',
-    age:26
-}
+// const user ={
+//     name:'fiyaz',
+//     age:26
+// }
 
-const {name,age} = user
+// const {name,age} = user
 
-console.log(name)
+// console.log(name)
+
+// foreach
+
+// const arr = [1,2,3]
+
+// arr.forEach((value,index)=>{
+//     console.log(index)
+// })
+
+// array map
+
+// const arr =['fiyaz','faris']
+
+// const newArr = arr.map((value)=>value)
+
+// console.log(newArr)
+
+//array filter
+
+// const users =[{
+//     name:'fiyaz',
+//     age:26
+// },
+//     {
+//         name:'faris',
+//         age:23
+//     },{
+//         name:"muhlar",
+//         age:20
+//     }
+
+
+// ]
+
+// const newArr = users.filter((value)=>{
+//    return value.age <=20 || value.name === 'faris'
+// })
+// console.log(newArr)
+
+// array reduce
+
+// const numbers =[1,2,3,45,5,6,6,6]
+
+// let result = numbers.reduce((total,value)=>total+value,0)
+
+
+
+// console.log(result)
+
+// array find
+
+// const numbers =[1,2,3,45,5,6,6,6]
+
+// // let result = numbers.find((value)=> value === 6 )
+
+// // console.log(result)
+
+
+
+// // array sort 
+
+// // for sorting in asceding a -b and for descending its b-a
+
+// let result = numbers.sort((a,b)=>a-b)
+
+// console.log(result)
+
+
+
+
+
+
+
+
 
 </script>
 
