--- a/16.html
+++ b/16.html
@@ -129,12 +129,55 @@
 
 // console.log(result)
 
+// array falt for nexted arrays 
+
+//  const numbers= [1,2,3,[4,5]]
+
+//  console.log(numbers.flat(Infinity))
+
+// const user ={
+//     name:'fiyaz',
+//     age:26,
+//     place:{
+//       city:  'koduvally'
+//     }
+// }
+
+// // if(user && user.place && user.place.city ){
+// //     console.log(user.place)
+// // }
+
+// // using chaining 
+
+// if(user?.place?.city){
+//  console.log(user.place.city)
+// }
+
+// concat method in js 
+
+// let num = [1,2,3,4]
+// let num1 =[4,5,6,7]
+// let num3 = num.concat(num1)
+// console.log(num3)
 
 
+// spread operator advantages
+
+// unpacking arrays
+
+// const arr =[1,2,3,4]
 
 
+// console.log(...arr)
 
+// unpacks the array and result will be 1,2,3,4
 
+// concat using spread 
+
+// const a =[1,2,3]
+// const b =[3,4,5]
+// const c=[12,...a,...b,79]
+// console.log(c)
 
 
 </script>
