mediaquery in js

--- a/css-selectors.html
+++ b/css-selectors.html
@@ -8,11 +8,24 @@
 </head>
 <body>
     <div>
- 
+ <!-- <h1 class="zero">Hello 0</h1>
 <h1 class="odd">Hello 1</h1>
 <h1 class="even">Hello 2</h1>
 <h1 class="odd">Hello 3</h1>
 <h1 class="even">Hello $</h1>
+    </div> -->
+
+<!-- <div class="div">
+    <h1 class="h1">Hello 1</h1>
+</div>
+<div class="div">
+    <h1 class="h1">Hello 2</h1>
+</div>
+<div class="div">
+    <h1 class="h1">Hello 3</h1>
+</div> -->
+
+<div class="main">Hello</div>
 
 
 
@@ -20,6 +33,26 @@
 
 
 
-    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
