updated with toggle

--- a/mediaQuery.html
+++ b/mediaQuery.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="main">
-        <h1 class="show hide">Secret Text</h1>
+        <h1 class="show">Secret Text</h1>
     </div>
     <script src="mediaQuery.js">
     
