for off loop, dom basics,html tags etc

--- a/1.html
+++ b/1.html
@@ -12,19 +12,69 @@ header.innerText = `The sum is ${c}`
 </script> -->
 
 
-<ul>
-    <li class="li"></li>
-    <li  class="li"></li>
-    <li class="li"></li>
-    <li class="li"></li>
+<!-- <ul id="numbers">
+    
 
-</ul>
+</ul> -->
+<!-- <ul id="dress"></ul> -->
+
+<!-- <script> -->
+<!-- //     let nums =['one','two','three','four','five','six']
+//     // let allLi = document.querySelectorAll('li')
+// //    allLi[0].innerText = nums[0]
+// let numbers=document.getElementById('numbers')  
 
 
+//     for(let num of nums){
+//         let li =document.createElement('li')
+//         li.innerText =num
+//         numbers.appendChild(li)
+//         console.log(li)
+//     }
+// let dresses =['shirt','jean','cap','tshirt']
+// let myul = document.getElementById('dress')
+
+// for(let dress of dresses ){
+//     let li = document.createElement("li")
+//     li.innerText = dress
+//     myul.appendChild(li)
+//     console.log(dress)
+// }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ -->
+
+
+
+
+<!-- </script> -->
+
+
+
+<!-- <div class="main"></div>
 <script>
-    let nums =['one','two','three','four']
-    let allLi = document.querySelectorAll('li')
-   allLi[0].innerText = nums[0]
-
-    console.log(allLi)
-</script>
+    let scores = [34,23,45,13,23,45,52]
+   
+   let myDiv= document.querySelector('.main')
+for(let score of scores){
+    let h1 = document.createElement('h1')
+    h1.innerText = score
+    myDiv.appendChild(h1)
+    console.log(score)
+}
+    
+</script> -->
