create element method

--- a/1.html
+++ b/1.html
@@ -78,3 +78,30 @@ for(let score of scores){
 }
     
 </script> -->
+
+<!-- <div class="mydiv"></div>
+
+<script>
+    let names = ['fiyaz','faris','muhlar']
+    let mydiv = document.querySelector('.mydiv')
+
+    for(let name of names){
+        let myh1 = document.createElement('h1')
+        myh1.innerText=name 
+        mydiv.appendChild(myh1)
+        console.log(name)
+    }
+</script> -->
+
+<!-- <div class="mydiv"></div>
+<script>
+    let ages=[23,21,24,24]
+    let mydiv = document.querySelector('.mydiv')
+
+    for(let age of ages ){
+        let myh2 = document.createElement('h2')
+        myh2.innerText = age
+        mydiv.appendChild(myh2)
+        console.log(age)
+    }
+</script> -->
