--- a/yestetch.html
+++ b/yestetch.html
@@ -10,8 +10,11 @@
     <input type="button" value="click me" onclick="message()">
     <h1 id="myh1"></h1> -->
 
-    <input type="button" value="add" onclick="add()">
-    <input type="button" value="remove" onclick="remove()">
+    <!-- <input type="button" value="add" onclick="add()">
+    <input type="button" value="remove" onclick="remove()"> -->
+<!-- 
+    <h1 id="heading">welcome</h1>
+    <button id="btn">Change Colour</button> -->
     <script src="yestech.js"></script>
 </body>
 </html>
